demo-5/securitygroup.tf
data "aws_ip_ranges" "us_ec2" {
  regions  = ["us-east-2"]
  services = ["ec2"]
}

resource "aws_security_group" "from_us" {
  name = "from_us"

  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    CreateDate = data.aws_ip_ranges.us_ec2.create_date
    SyncToken  = data.aws_ip_ranges.us_ec2.sync_token
  }
}
